--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP-java7</artifactId>
             <version>2.4.13</version>
